--- a/apps/photoprism/docker-compose.yml
+++ b/apps/photoprism/docker-compose.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "${APP_PORT}:2342"
     environment:
+      PHOTOPRISM_INIT: "ffmpeg tensorflow"
       PHOTOPRISM_ADMIN_PASSWORD: ${PHOTOPRISM_ADMIN_PASSWORD}
       PHOTOPRISM_AUTH_MODE: "password"
       PHOTOPRISM_SITE_URL: "${APP_PROTOCOL:-http}://${APP_DOMAIN}/"
@@ -41,7 +42,7 @@ services:
       PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos App"
     working_dir: "/photoprism"
     volumes:
-      - "${TOP_IMAGE_DIR}:/photoprism/originals"
+      - "${TOP_IMAGE_DIR:-${ROOT_FOLDER_HOST}/media/data/images}}:/photoprism/originals"
       - "${APP_DATA_DIR}/data/photoprism/storage:/photoprism/storage"
     networks:
       - tipi_main_network
