--- a/apps/photoprism/docker-compose.yml
+++ b/apps/photoprism/docker-compose.yml
@@ -42,7 +42,7 @@ services:
       PHOTOPRISM_SITE_CAPTION: "AI-Powered Photos App"
     working_dir: "/photoprism"
     volumes:
-      - "${TOP_IMAGE_DIR:-${ROOT_FOLDER_HOST}/media/data/images}}:/photoprism/originals"
+      - "${TOP_IMAGE_DIR:-${ROOT_FOLDER_HOST}/media/data/images}:/photoprism/originals"
       - "${APP_DATA_DIR}/data/photoprism/storage:/photoprism/storage"
     networks:
       - tipi_main_network
